objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Archive_Canidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive Canidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Article_Number_Link__c</fullName>
        <formula>IF ( $User.isSandbox__c,
HYPERLINK(&quot;https://imaginecommunications--test.lightning.force.com/lightning/articles/Knowledge/&quot;&amp;UrlName, ArticleNumber), HYPERLINK(&quot;https://imaginecommunications.lightning.force.com/lightning/articles/Knowledge/&quot;&amp;UrlName, ArticleNumber) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Number Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Fix_Describe_the_Symptom_What_is46__c</fullName>
        <label>Z-Not Used-Describe the Symptom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Fix_Link__c</fullName>
        <label>Z-Not Used-Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Break_Fix_Search_Tags__c</fullName>
        <label>Z-Not Used-Search Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Fix_Solution__c</fullName>
        <label>Z-Not Used-Solution</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Community_Link__c</fullName>
        <formula>&quot;https://community.imaginecommunications.com/s/article/&quot;&amp;UrlName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Docs_Category_2__c</fullName>
        <label>Docs Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Docs_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landmark</fullName>
                </value>
                <value>
                    <fullName>Broadcast_Master</fullName>
                    <label>Broadcast Master</label>
                </value>
                <value>
                    <fullName>Targeted Delivery</fullName>
                </value>
                <value>
                    <fullName>Eclipse</fullName>
                </value>
                <value>
                    <fullName>xG Products</fullName>
                </value>
                <value>
                    <fullName>Novar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docs_Category_3__c</fullName>
        <label>Docs Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Docs_Category_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landmark Sales</fullName>
                </value>
                <value>
                    <fullName>LandmarkOSI Traffic and Billing</fullName>
                </value>
                <value>
                    <fullName>Landmark Rights &amp; Scheduling</fullName>
                </value>
                <value>
                    <fullName>Landmark Agency Service (LAS)</fullName>
                </value>
                <value>
                    <fullName>Landmark Analytics</fullName>
                </value>
                <value>
                    <fullName>POIS</fullName>
                </value>
                <value>
                    <fullName>ADS_Ad_Decision_Service</fullName>
                    <label>ADS (Ad Decision Service)</label>
                </value>
                <value>
                    <fullName>ADR_Ad_Decision_Router</fullName>
                    <label>ADR (Ad Decision Router)</label>
                </value>
                <value>
                    <fullName>AIM_Dynamic_Ad_Insertion</fullName>
                    <label>AIM (Dynamic Ad Insertion)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docs_Category__c</fullName>
        <label>Docs Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Playout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentation_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documentation_Download_Link__c</fullName>
        <inlineHelpText>Link will open a folder on Box.com that will allow you to download this item.</inlineHelpText>
        <label>Download Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Documentation_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Related__c</fullName>
        <label>Related</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Documentation_Release_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documentation_Release_Number__c</fullName>
        <label>Release Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Search_Tags__c</fullName>
        <label>Z-Not Used-Search Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQ_Answer__c</fullName>
        <label>Z-Not Used-Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FAQ_Link__c</fullName>
        <label>Z-Not Used-Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FAQ_Question__c</fullName>
        <label>Z-Not Used-Question</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQ_Search_Tags__c</fullName>
        <description>Key words to help with finding articles through search.</description>
        <label>Z-Not Used-Search Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQ_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>How To</fullName>
                </value>
                <value>
                    <fullName>Break/Fix</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Files_Attached__c</fullName>
        <label># Files Attached</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_To_Additional_notes__c</fullName>
        <description>Links to supporting documentation, caveats, or other helpful background information that is not strictly an objective, environment or procedure.</description>
        <inlineHelpText>Links to supporting documentation, caveats, or other helpful background information that is not strictly an objective, environment or procedure.</inlineHelpText>
        <label>Z-Not Used-Additional notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_To_Environment__c</fullName>
        <description>The hardware, software, environmental conditions and recent changes that are associated with the Objective and Procedure.  Generally our company&apos;s product and/or product components are listed first.  It&apos;s OK for environment to partially overlap with metadata.</description>
        <inlineHelpText>The hardware, software and environmental conditions that are associated with the objective.  Our company&apos;s product or components should be listed first.</inlineHelpText>
        <label>Z-Not Used-Environment/Version</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_To_Internal_notes__c</fullName>
        <description>Content that would be helpful to an internal staff member but is not appropriate to share with a customer or partner.  Examples include links to internal content or defects; contact information for specific individuals who can help resolve the issue or procedural steps that can only be performed by an internal staff member.</description>
        <inlineHelpText>Content that would be helpful to an internal staff member but is not appropriate to share with a customer or partner.  Examples include links to internal content or defects; contact information for specific individuals who can help resolve the issue.</inlineHelpText>
        <label>Z-Not Used-Internal notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_To_Objective__c</fullName>
        <description>The task that the customer is hoping to accomplish.  A broad description can come first followed by more specific details.</description>
        <inlineHelpText>The task that the customer is hoping to accomplish.  A broad description can come first followed by more specific details.</inlineHelpText>
        <label>Z-Not Used-Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_To_Procedure__c</fullName>
        <description>A numbered series of steps to accomplish the objective.</description>
        <inlineHelpText>A numbered series of steps to accomplish the objective</inlineHelpText>
        <label>Z-Not Used-Procedure</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_To_Title__c</fullName>
        <description>A brief, descriptive, unique overview of the procedure.  Should start with &quot;How To ...&quot; with a summary of the task.</description>
        <inlineHelpText>A brief, descriptive, unique overview of the procedure.  Should start with &quot;How To ...&quot; with a summary of the task.</inlineHelpText>
        <label>Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Includes_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not sure what i&apos;m using it for but since we&apos;re manually editing all articles trying to capture if there is docs or not.</description>
        <label>Includes Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Link__c</fullName>
        <formula>IF ( $User.isSandbox__c, 
&quot;https://imaginecommunications--test.lightning.force.com/lightning/articles/Knowledge/&quot;&amp;UrlName, &quot;https://imaginecommunications.lightning.force.com/lightning/articles/Knowledge/&quot;&amp;UrlName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Helpful and handy if you want to send a link to an article.  Use Community Link to send to customers.</inlineHelpText>
        <label>Internal Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpenTV_Solution_IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenTV_Solution_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eclipse</fullName>
                </value>
                <value>
                    <fullName>Eclipse Plus 4.1.0</fullName>
                </value>
                <value>
                    <fullName>Eclipse Plus 4.2.0</fullName>
                </value>
                <value>
                    <fullName>Eclipse Plus 4.3.0</fullName>
                </value>
                <value>
                    <fullName>EDA</fullName>
                </value>
                <value>
                    <fullName>eRevisions</fullName>
                </value>
                <value>
                    <fullName>xG/Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenTV_Solution_Solution_Details__c</fullName>
        <label>Solution Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OpenTV_Solution_Solution_Number__c</fullName>
        <label>Solution Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenTV_Solution_Solution_Title__c</fullName>
        <label>Solution Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenTV_Solution_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Reviewed - Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenTV_Solution_Visible_in_Public_Know42__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible in Public Knowledge Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Link__c</fullName>
        <formula>&quot;https://partner.imaginecommunications.com/s/article/&quot;&amp;UrlName</formula>
        <label>Partner Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum MX</fullName>
                </value>
                <value>
                    <fullName>Platinum PT-HSR8C-IBG</fullName>
                </value>
                <value>
                    <fullName>Platinum PT-RES</fullName>
                </value>
                <value>
                    <fullName>Platinum VX</fullName>
                </value>
                <value>
                    <fullName>PX-IBG</fullName>
                </value>
                <value>
                    <fullName>Videotek CMN, CVM, TVM, VMN, VTM, APM-21</fullName>
                </value>
                <value>
                    <fullName>Videotek CSD and Videotek MTG</fullName>
                </value>
                <value>
                    <fullName>Videotek DDM</fullName>
                </value>
                <value>
                    <fullName>Videotek GPS</fullName>
                </value>
                <value>
                    <fullName>Videotek LLM-1770</fullName>
                </value>
                <value>
                    <fullName>Videotek MSA</fullName>
                </value>
                <value>
                    <fullName>Videotek VMM</fullName>
                </value>
                <value>
                    <fullName>Videotek VSG</fullName>
                </value>
                <value>
                    <fullName>Videotek VSX</fullName>
                </value>
                <value>
                    <fullName>Air Client</fullName>
                </value>
                <value>
                    <fullName>Broadcast Supervisor</fullName>
                </value>
                <value>
                    <fullName>Device Server</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Monitor</fullName>
                </value>
                <value>
                    <fullName>LRCC</fullName>
                </value>
                <value>
                    <fullName>Media Client</fullName>
                </value>
                <value>
                    <fullName>Missing Media Viewer</fullName>
                </value>
                <value>
                    <fullName>Notification Agent</fullName>
                </value>
                <value>
                    <fullName>Playlist and Services</fullName>
                </value>
                <value>
                    <fullName>Security Administration Tool</fullName>
                </value>
                <value>
                    <fullName>SynchroServer</fullName>
                </value>
                <value>
                    <fullName>D-Series A8600, A8100, A7500</fullName>
                </value>
                <value>
                    <fullName>D-AIS</fullName>
                </value>
                <value>
                    <fullName>DAL</fullName>
                </value>
                <value>
                    <fullName>D-Services</fullName>
                </value>
                <value>
                    <fullName>DRSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Pillar__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Advertising</fullName>
                </value>
                <value>
                    <fullName>Advertising Sales</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Rights &amp; Programming</fullName>
                </value>
                <value>
                    <fullName>Targeted Delivery</fullName>
                </value>
                <value>
                    <fullName>Traffic</fullName>
                </value>
                <value>
                    <fullName>Cloud DVR</fullName>
                </value>
                <value>
                    <fullName>Distribution - Encoding</fullName>
                </value>
                <value>
                    <fullName>Distribution - Transcoding</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Video Edge Delivery (VDE)</fullName>
                </value>
                <value>
                    <fullName>Command &amp; Control</fullName>
                </value>
                <value>
                    <fullName>Multiviewers</fullName>
                </value>
                <value>
                    <fullName>Networking - Encoding</fullName>
                </value>
                <value>
                    <fullName>Networking - Transcoding</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Test &amp; Measurement</fullName>
                </value>
                <value>
                    <fullName>Automation &amp; Asset Management</fullName>
                </value>
                <value>
                    <fullName>Digital Signage</fullName>
                </value>
                <value>
                    <fullName>Integrated Playout</fullName>
                </value>
                <value>
                    <fullName>Master Control, Branding &amp; Graphics</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Versio</fullName>
                </value>
                <value>
                    <fullName>Video Server News &amp; Editing</fullName>
                </value>
                <value>
                    <fullName>Video Servers Nexio Media Applications</fullName>
                </value>
                <value>
                    <fullName>Video Servers Other</fullName>
                </value>
                <value>
                    <fullName>Video Servers Transmission and Specialty</fullName>
                </value>
                <value>
                    <fullName>Legacy Playout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Family__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eclipse</fullName>
                </value>
                <value>
                    <fullName>Landmark Agency Service (LAS)</fullName>
                </value>
                <value>
                    <fullName>Novar</fullName>
                </value>
                <value>
                    <fullName>xG GamePlan</fullName>
                </value>
                <value>
                    <fullName>Broadcast Master</fullName>
                </value>
                <value>
                    <fullName>Broadcast Master Nonlinear</fullName>
                </value>
                <value>
                    <fullName>LandmarkOSI Sales</fullName>
                </value>
                <value>
                    <fullName>Landmark Sales</fullName>
                </value>
                <value>
                    <fullName>Landmark Analytics</fullName>
                </value>
                <value>
                    <fullName>xG Scorecard</fullName>
                </value>
                <value>
                    <fullName>xG Billing</fullName>
                </value>
                <value>
                    <fullName>xG Finance</fullName>
                </value>
                <value>
                    <fullName>Landmark Rights &amp; Scheduling</fullName>
                </value>
                <value>
                    <fullName>xG Schedule</fullName>
                </value>
                <value>
                    <fullName>ADR</fullName>
                </value>
                <value>
                    <fullName>ADS</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>POIS</fullName>
                </value>
                <value>
                    <fullName>Interactive Reporting</fullName>
                </value>
                <value>
                    <fullName>LandmarkOSI Internet</fullName>
                </value>
                <value>
                    <fullName>LandmarkOSI Traffic and Billing</fullName>
                </value>
                <value>
                    <fullName>Program Plus</fullName>
                </value>
                <value>
                    <fullName>xG Linear</fullName>
                </value>
                <value>
                    <fullName>xG Live Log</fullName>
                </value>
                <value>
                    <fullName>CloudXtream DVR</fullName>
                </value>
                <value>
                    <fullName>Telurio Cloud DVR</fullName>
                </value>
                <value>
                    <fullName>SelenioFlex Ingest</fullName>
                </value>
                <value>
                    <fullName>SelenioFlex Live</fullName>
                </value>
                <value>
                    <fullName>SelenioFlex Live Manager</fullName>
                </value>
                <value>
                    <fullName>Selenio One XC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Pillar__c</fullName>
        <description>Used to determine category assignment and drive recommendations to cases. Level 1</description>
        <inlineHelpText>Used to determine category assignment and drive recommendations to cases. Level 1</inlineHelpText>
        <label>Product Pillar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Playout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_A_Additional_notes__c</fullName>
        <description>Links to the supporting documentation, caveats or other helpful background information that&apos;s not strictly a question, environment, or answer.</description>
        <inlineHelpText>Links to the supporting documentation, caveats or other helpful background information that&apos;s not strictly a question, environment, or answer.</inlineHelpText>
        <label>Z-Not Used-Additional notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q_A_Answer__c</fullName>
        <description>The answer to the question</description>
        <inlineHelpText>The answer to the question.</inlineHelpText>
        <label>Z-Not Used-Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_A_Environment__c</fullName>
        <description>The hardware, software, environmental conditions and recent changes that are associated with the Question and the Answer, if any.</description>
        <inlineHelpText>The hardware, software, environmental conditions and recent changes that are associated with the Question and the Answer, if any.</inlineHelpText>
        <label>Z-Not Used-Environment/Version</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_A_Internal_notes__c</fullName>
        <description>Content that would be helpful to an internal staff member but is not appropriate to share with a customer or partner.  Examples include links to internal content or defects, contact information for specific individuals who can help resolve the issues or procedural steps that can only be performed by a company staff member.</description>
        <inlineHelpText>Content that would be helpful to an internal staff member but is not appropriate to share with a customer or partner.  Examples include links to internal content or defects, contact information for specific individuals who can help resolve the issues.</inlineHelpText>
        <label>Z-Not Used-Internal notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_A_Question__c</fullName>
        <description>A brief, descriptive, unique summary of the question.  This should be written in the form of a question.</description>
        <inlineHelpText>A brief, descriptive, unique summary of the question.  This should be written in the form of a question.</inlineHelpText>
        <label>Z-Not Used-Question</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RGB_FAQ_Details__c</fullName>
        <label>Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RGB_FAQ_SolutionID__c</fullName>
        <label>SolutionID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Bug_Numbers__c</fullName>
        <description>List of the bugs fixed in the given release.</description>
        <label>Bug Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Download_Link__c</fullName>
        <inlineHelpText>Link will open a folder on Box.com that will allow you to download this item.</inlineHelpText>
        <label>Download Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Related__c</fullName>
        <label>Related</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Release_Number__c</fullName>
        <label>Release Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Search_Tags__c</fullName>
        <description>Key words to help with finding articles through search.</description>
        <label>Z-Not Used-Search Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Internal_Only_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Alert_Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Software_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I don&apos;t know what i&apos;m thinking here, adding a flag for now since we have to manually edit each article to capture if there is actually software at the end of the link</description>
        <label>Software Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Additional_notes__c</fullName>
        <description>Links to supporting documentation, caveats, or other helpful background information that&apos;s not strictly a symptom, environment, cause or resolution.</description>
        <inlineHelpText>Links to supporting documentation, caveats, or other helpful background information that&apos;s not strictly a symptom, environment, cause or resolution.</inlineHelpText>
        <label>Z-Not Used-Additional notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Cause__c</fullName>
        <description>The reason for the problem (if known).  This is not visible to customers.</description>
        <inlineHelpText>The reason for the problem (if known).  This is not visible to customers.</inlineHelpText>
        <label>Z-Not Used-Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Environment__c</fullName>
        <description>The hardware, software, environmental conditions, and recent changes are that are associated with this particular problem and resolution.  Generally Imagine products and/or components are listed first.  It&apos;s ok for environment to partially overlap with metadata.</description>
        <inlineHelpText>The hardware, software, environmental conditions, and recent changes are that are associated with this particular problem.  Generally Imagine products and/or components are listed first.  It&apos;s ok for environment to partially overlap with metadata.</inlineHelpText>
        <label>Z-Not Used-Environment/Version</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>